fix: resize bar overflow

--- a/src/components/Chat/ChatContent.module.scss
+++ b/src/components/Chat/ChatContent.module.scss
@@ -1,5 +1,6 @@
 .chat_content {
     overflow: hidden;
+    position: relative;
     display: flex;
     flex-direction: column;
     flex-shrink: 0;
